infra/k8s/base/campaign/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaign
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campaign
  template:
    metadata:
      labels:
        app: campaign
    spec:
      imagePullSecrets:
        - name: scaleway-registry
      containers:
        - name: campaign
          image: rg.fr-par.scw.cloud/loreweaver/campaign:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: campaign-data
              mountPath: /data/campaigns
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
      volumes:
        - name: campaign-data
          persistentVolumeClaim:
            claimName: campaign-pvc
