infra/k8s/base/campaign/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: campaign
spec:
  selector:
    app: campaign
  ports:
    - port: 3000
      targetPort: 3000
